# hcs-benchmark

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Changes.md  Doxyfile  README.md  conanfile.txt  sonar-project.properties
cmake/: deb-package.cmake  rpm-package.cmake
include/headcode/benchmark/: benchmark.hpp  version.hpp
test/: CMakeLists.txt
test/shared/: ipsum_lorem.hpp
test/unit/: CMakeLists.txt  test_benchmark.cpp  test_version.cpp
tools/: CMakeLists.txt
tools/conan/: CMakeLists.txt  conanfile.py
tools/docker/: CMakeLists.txt  Dockerfile.build.debian-buster  Dockerfile.build.fedora32  Dockerfile.build.ubuntu-bionic  Dockerfile.build.ubuntu-focal  README.md  create-containers.sh
tools/package/: CMakeLists.txt
